--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/WilWadman/lime-weather#readme",
   "dependencies": {
+    "axios": "^1.2.2",
+    "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2"
   }
